--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,25 @@
+/*All Components*/
+
+.top {
+  float: top;
+}
+
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
 /*AppComponent*/
 *{
   margin: 0px;
@@ -20,7 +42,6 @@ div.main{
   margin: 0px auto;
   margin-top: 50px;
   margin-bottom: 50px;
-  float: top;
   overflow: auto !important;
   padding-bottom: 5px !important;
 }
@@ -28,18 +49,16 @@ div.main{
 .frame{
   width: 990px;
   background: #f5f5f5;
-  margin: 5px;
-  margin-top: 0px;
-  float: top;
+  margin: 0px 5px 5px;
   padding-top: 0px;
   border: none;
 }
 
 /*NavigationBarComponent*/
 
-  .navbar{
-    margin-bottom: 5px !important;
-  }
+.navbar{
+  margin-bottom: 5px !important;
+}
 
 .navbar-header{
   cursor: default;
@@ -51,7 +70,6 @@ div.main{
 
 /*CalendarComponent*/
   div.calendarMain{
-    float: left;
     width: 990px;
     background: #f5f5f5;
     height: auto;
@@ -67,13 +85,11 @@ div.main{
   max-width: 81px;
   padding-right: 10px;
   margin-right: 0px;
-  float: left;
 }
 
 .pagination{
   padding: 0px;
   margin: 0px;
-  float: top;
   display: inline-block;
   width: 987px;
 }
@@ -99,35 +115,25 @@ div.main{
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
+
 .stats{
   margin: 0px;
   margin-bottom: 10px;
-  float: right;
   max-width: 987px;
   max-height: 20px;
   padding: 0px;
 }
 
 .lilStat{
-  float: right;
   max-height: 10px;
   text-align: right;
   font-size: 10px;
   margin-right: 10px;
 }
 
-.red {
-  color: red;
-}
-
-.green {
-  color: green;
-}
-
 .dayHead{
   margin: 0px;
   text-align: center;
-  float: left;
   max-width: 987px;
   max-height: 20px;
   padding: 0px;
@@ -138,18 +144,18 @@ div.main{
   text-align: center;
   height: 20px;
   margin: 0px;
-  float: left;
   font-weight: bold;
 }
 
 .buttons{
-  float: left;
   max-width: 987px;
   padding-top: 10px;
   padding-left: 10px;
   background: #f5f5f5;
   margin-top: 0px;
 }
+
+/*DayComponent*/
 
 .container{
   height: 140px;
