--- a/src/app/calendar/day/weekend-dialog/weekend-dialog.component.html
+++ b/src/app/calendar/day/weekend-dialog/weekend-dialog.component.html
@@ -1,6 +1,6 @@
-<h3 mat-dialog-title>Working on a weekend</h3>
-<mat-dialog-content>Are you sure you want to enable it?</mat-dialog-content>
+<h2 mat-dialog-title>Working on a weekend</h2>
+<mat-dialog-content class="center">Are you sure you want to enable it?</mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="true">Yes</button>
-  <button mat-button mat-dialog-close>No</button>
+  <button class="center" mat-raised-button [mat-dialog-close]="true">Yes</button>
+  <button class="center" mat-raised-button [mat-dialog-close]="false">No</button>
 </mat-dialog-actions>
