--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,55 +1,3 @@
 <div class="mainTable">
-  <table class="table table-bordered">
-    <thead>
-    <tr>
-      <th>2018.02.06</th>
-      <th>statisztika</th>
-      <th>statisztika</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    <tr class="success">
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    <tr class="danger">
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    <tr class="info">
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    <tr class="warning">
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    <tr class="active">
-      <td>id</td>
-      <td>comment</td>
-      <td>starttime</td>
-      <td>endtime</td>
-      <td>szekresztésjönmajdinnen</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-day-table  *ngFor="let day of dayArray" [day]="day" ></app-day-table>
 </div>
