--- a/src/styles.css
+++ b/src/styles.css
@@ -223,10 +223,31 @@ input.form-control{
 }
 
 /*TableComponent*/
-  .mainTable{
-    max-width: 900px;
-  }
+.mainTable{
+    width: 990px;
+    background: #f5f5f5;
+    height: auto;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    margin: 0px auto;
+    padding: 0px;
+}
 
+/*Day-tableComponent*/
 .table{
-  max-width: 900px;
+  background: #FFF;
+  max-width: 987px;
+  padding-top: 10px;
+  padding-left: 10px;
+  margin-top: 0px;
+}
+
+thead{
+  background: #f5f5f5;
+}
+
+.noTime{
+  background: #ffffb3;
 }
